syntax = "proto3";

package app.improving.gateway;

import "app/improving/member/api/member_api.proto";
import "app/improving/order/api/order_api.proto";
import "app/improving/product/api/product_api.proto";
import "app/improving/store/api/store_api.proto";
import "app/improving/event/api/event_api.proto";
import "app/improving/tenant/api/tenant_api.proto";
import "common_api.proto";
import "app/improving/organization/api/organization_api.proto";
import "common_domain.proto";

message CreateTenant {
    tenantcontext.tenant.ApiInfo tenant_info = 1;
}

message TenantCreated {
    ApiTenantId tenant_created = 1;
}

message ReleaseTenants {
    repeated tenantcontext.tenant.ApiReleaseTenant release_tenants = 1;
}

message TenantsReleased {
    repeated ApiTenantId released_tenants = 1;
}

message CreateTenants {
    repeated tenantcontext.tenant.ApiInfo tenant_info = 1;
}

message TenantsCreated {
    repeated ApiTenantId tenants_created = 1;
}

message EstablishOrganization {
    organizationcontext.organization.ApiInfo info = 2;
    organizationcontext.organization.ApiParent parent = 3;
    repeated ApiMemberId members = 4;
    repeated ApiMemberId owners = 5;
    repeated organizationcontext.organization.ApiContacts contacts = 6;
    ApiMemberId establishing_member = 7;
    organizationcontext.organization.ApiMetaInfo meta = 8;
}

message CreateOrganization {
    organizationcontext.organization.ApiEstablishOrganization establish_organization = 1;
}

message OrganizationCreated {
    OrganizationId organization_created = 1;
}

message ReleaseOrganizations {
    repeated ApiOrganizationId organization_ids = 1;
}

message OrganizationsReleased {
    repeated ApiOrganizationId released_orgs = 1;
}

message CreateOrganizations {
    repeated EstablishOrganization establish_organizations = 1;
}

message AddMembersToOrganization {
    ApiOrganizationId org_id = 1;
    repeated ApiMemberId members_to_add = 2;
    ApiMemberId updating_member = 3;
}

message OrganizationStatusUpdate {
    ApiOrganizationId org_id = 1;
    organizationcontext.organization.ApiOrganizationStatus new_status = 2;
    ApiMemberId updating_member = 3;
}

message OrganizationsCreated {
    repeated ApiOrganizationId organizations_created = 1;
}

message CreateEvent {
    eventcontext.event.ApiEventInfo info = 1;
    ApiMemberId scheduling_member = 2;
}

message EventCreated {
    ApiEventId event_created = 1;
}

message ReleaseEvents{
    repeated ApiEventId event_ids = 1;
}

message EventsReleased {
    repeated ApiEventId released_events = 1;
}

message CreateEvents {
    repeated eventcontext.event.ApiEventInfo infos = 1;
    ApiMemberId scheduling_member = 2;
}

message EventsCreated {
    repeated ApiEventId events_created = 1;
}

message EstablishStore {
    storecontext.store.ApiStoreInfo info = 1;
    ApiMemberId creating_member = 2;
}

message CreateStore {
    storecontext.store.ApiStoreInfo info = 1;
    ApiMemberId creating_member = 2;
}

message StoreCreated {
    ApiStoreId store_created = 1;
}

message CreateStores {
    repeated storecontext.store.ApiStoreInfo infos = 1;
    ApiMemberId creating_member = 2;
}

message StoresCreated {
    repeated ApiStoreId stores_created = 1;
}

message ReleaseStores{
    repeated ApiStoreId store_ids = 1;
}

message StoresReleased {
    repeated ApiStoreId released_stores = 1;
}

message EstablishProduct {
    productcontext.product.ApiProductInfo info = 1;
    productcontext.product.ApiProductMetaInfo meta = 2;
}

message CreateProduct {
    EstablishProduct establish_product = 1;;
}

message ProductCreated {
    ApiSku product_created = 1;
}

message CreateProducts {
    repeated EstablishProduct establish_products = 1;
}

message ProductsCreated {
    repeated ApiSku products_created = 1;
}

message ReleaseProducts{
    repeated ApiSku skus = 1;
}

message ProductsReleased {
    repeated ApiSku released_skus = 1;
}

message EstablishMember {
    membercontext.member.ApiInfo info = 1;
    ApiMemberId registering_member = 2;
}

message RegisterMember {
    EstablishMember establish_member = 1;
}

message UpdateMemberInfo {
    ApiMemberId member_id = 1;
    membercontext.member.ApiUpdateInfo info = 2;
    ApiMemberId upatinging_member = 3;
}

message UpdateMemberStatus {
    ApiMemberId member_id = 1;
    ApiMemberId acting_member = 2;
    membercontext.member.ApiMemberStatus new_status = 3;
}

message MemberRegistered {
    ApiMemberId member_registered  =1;
}

message RegisterMembers {
    repeated EstablishMember establish_members = 1;

}

message MembersRegistered {
    repeated ApiMemberId members_registered  =1;
}

message ReleaseMembers{
    repeated ApiMemberId members = 1;
}

message MembersReleased {
    repeated ApiMemberId released_members = 1;
}

message EstablishOrder {
    ordercontext.order.ApiOrderInfo info = 1;
    ApiMemberId creating_member = 2;
    ApiStoreId store_id = 3;
}

message CreateOrder {
    EstablishOrder establish_order = 1;
}

message OrderCreated {
    ApiOrderId order_created = 1;
}

message CreateOrders {
    repeated EstablishOrder establish_orders = 1;
}

message OrdersCreated {
    repeated ApiOrderId orders_created = 1;
}

message ReleaseOrders{
    repeated ApiOrderId orders = 1;
}

message OrdersReleased {
    repeated ApiOrderId released_orders = 1;
}
message OrganizationIds {
    repeated ApiOrganizationId org_ids = 1;
}

message MemberIds {
    repeated ApiMemberId member_ids = 1;
}

message EventIds {
    repeated ApiEventId event_ids = 1;
}

message OrderIds {
    repeated ApiOrderId order_ids = 1;
}

message StoreIds {
    repeated ApiStoreId store_ids = 1;
}

message Skus {
    repeated ApiSku skus = 1;
}